[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14.0"
api = { path = "../api", features = ["async"] }
confy = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
